# tmp-g

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  build.Dockerfile  docker-compose-local-solo.yml  docker-compose-local.yml  docker-compose_build.yml  docker-compose_solo_run.yml  docker_run.sh  run.Dockerfile  tmp_substrate_improvements.txt
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/feeless/: Cargo.toml  README.md
pallets/feeless-playground/: Cargo.toml  README.md
pallets/feeless-playground/src/: benchmarking.rs  lib.rs  weights.rs
pallets/feeless-shawns/src/: lib.rs
pallets/feeless-transactions/: Cargo.toml
pallets/feeless-transactions/src/: lib.rs
pallets/feeless/src/: lib.rs
pallets/identity/: Cargo.toml
pallets/identity/src/: benchmarking.rs  legacy.rs  lib.rs  migration.rs  tests.rs  tmp.rs  types.rs  weights.rs
pallets/middleware/: Cargo.toml
pallets/middleware/src/: benchmarking.rs  lib.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: define_identity_info.rs  g6_identity_info.rs  lib.rs  types.rs
