[package]
name = "pallet-feeless-playground"
description = "G6 Chain Feeless transactions FRAME pallet"
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false, features = ["derive",] }
scale-info = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false, features = ["serde"] }

[lints]
workspace = true

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "codec/std",
    "scale-info/std",
]