[package]
name = "pallet-middleware"
description = "G6 Chain Middleware pallet"
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false, features = ["derive",] }
scale-info = { workspace = true, default-features = false }

[lints]
workspace = true

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "codec/std",
    "scale-info/std",
]