[package]
name = "pallet-middleware"
description = "G6 Chain Middleware pallet"
version.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = { version = "0.4.17", default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false, features = ["derive",] }
scale-info = { workspace = true, default-features = false }
sp-runtime = { workspace = true,  default-features = false }
sp-io = { workspace = true,  default-features = false }
sp-core = { workspace = true }

#[dev-dependencies]
#sp-core = {  workspace = true }

[lints]
workspace = true

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
]